--- a/style.css
+++ b/style.css
@@ -206,41 +206,41 @@ transform: translateX(0px);
     z-index: 0;
     float: left;
     width: 100%;
-    height: 150vh;
+    height: 250vh;
     background-image: url('bg.jpg');
     position: relative; 
     background-repeat: repeat;
-    background-size:contain ;
+    background-size:auto;
 }
 .content2{
     z-index: 0;
     float: left;
     width: 100%;
-    height: 200vh;
+    height: 250vh;
     background-image: url('bg2.jpg');
     position: relative; 
     background-repeat: repeat;
-    background-size:contain ;
+    background-size:auto;
 }
 .content3{
     z-index: 0;
     float: left;
     width: 100%;
-    height: 200vh;
+    height: 230vh;
     background-image: url('grass.jpg');
     position: relative; 
     background-repeat: repeat;
-    background-size:contain ;
+    background-size:cover;
 }
 .content4{
     z-index: 0;
     float: left;
     width: 100%;
-    height: 75vh;
+    height: 30%;
     background-image: url('contact.jpg');
     position: relative; 
     background-repeat: repeat;
-    background-size:contain ;
+    background-size:auto;
 }
 .content-left{
     border-radius: 15px;
@@ -277,8 +277,8 @@ transform: translateX(0px);
     background-color: var(--secondary-color-bg);
     box-shadow: 0 00px 30px 0px rgba(0, 0, 0, 0.7);
     font-size: 22px;
-    width: 30vw;
-    margin-left: 35%;
+    width: 60vw;
+    margin-left: 20%;
     margin-right: auto;
     margin-top: 15px;
     margin-bottom:  100px;
