--- a/style2.css
+++ b/style2.css
@@ -1,12 +1,12 @@
 :root {
-    --primary-color: #ffffff;
-    --secondary-color: rgb(255, 208, 0);
-    --secondary-color-bg: rgb(255, 208, 0);
+    --primary-color: #252525;
+    --secondary-color: rgb(0, 0, 0);
+    --secondary-color-bg: rgb(0, 0, 0);
     --lightyellow: rgb(206, 206, 206);
     --third-color: rgba(230, 230, 230, 0.5);
-    --black: rgb(0, 0, 0);
+    --black: rgb(255, 217, 0);
     --grey: rgb(190, 190, 190);
-    --darkgrey: rgb(90, 90, 90);
+    --darkgrey: rgb(0, 0, 0);
     --background: rgb(255, 243, 191);
   }
   html {
@@ -91,22 +91,6 @@ nav {
     border-radius: 0;
     text-align: center;
 }
-
-.kontrastbutton{
-    width: 80px;
-    height: 30px;
-    transition: 1s;
-}
-.kontrastbutton:hover{
-    width: 80px;
-    border: 0px solid var(--black);
-    background-color: var(--primary-color);
-    box-shadow: 00px 0px 10px 0px rgba(0, 0, 0, 0.2);
-    transition: 1s;
-    border-radius: 100px;
-}
-
-
 /*sekcja zwijana*/
 .burger {
     display: none;
@@ -125,7 +109,7 @@ nav {
         width: 60%;
     }
 }
-@media screen and (max-width:1238px) {
+@media screen and (max-width:1368px) {
     body{
         overflow-x: hidden;
     }
@@ -140,7 +124,7 @@ nav {
         right: 0px;
         height: 92vh;
         top: 9.9vh;
-        background-color: var(--secondary-color);
+        background-color: var(--black);
         display: flex;
         flex-direction: column;
         justify-content:center;
@@ -276,11 +260,12 @@ transform: translateX(0px);
 }
 
 .content{
+    color: var(--black);
     z-index: 0;
     float: left;
     width: 100%;
     height: 250vh;
-    background-image: url('bg.jpg');
+    background-image: url('bgnormy.png');
     position: relative; 
     background-repeat: repeat;
     background-size:auto;
@@ -290,7 +275,7 @@ transform: translateX(0px);
     float: left;
     width: 100%;
     height: 250vh;
-    background-image: url('bg2.jpg');
+    background-image: url('bgnormy.png');
     position: relative; 
     background-repeat: repeat;
     background-size:auto;
@@ -301,7 +286,7 @@ transform: translateX(0px);
     width: 100%;
     height: 230vh;
     min-height: 100%;
-    background-image: url('grass.jpg');
+    background-image: url('bgnormy.png');
     position: relative; 
     background-repeat: repeat;
     background-size:cover;
@@ -312,7 +297,7 @@ transform: translateX(0px);
     width: 100%;
     height: 50%;
     min-height: 40%;
-    background-image: url('contact.jpg');
+    background-image: url('bgnormy.png');
     position: relative; 
     background-repeat: repeat;
     background-size:auto;
@@ -434,16 +419,16 @@ a:active {
 }
 .emails{
 
-    color: var(--secondary-color);
+    color: var(--black);
 }
 .aboutboldness{
-    color: var(--secondary-color);
+    color: var(--black);
     font-weight: 900;
 }
 .read-more-button {
     
     text-shadow: -2px -2px 4px  black;
-    color: var(--primary-color);
+    color: var(--black);
     list-style: none;
     text-decoration: none;
     font-size: 40px;
@@ -454,8 +439,8 @@ a:active {
     width: 100%;
     float: right;
     border-radius: 15px;
-    background-color: rgb(122, 122, 122);
-    color: var(--primary-color);
+    background-color: var(--primary-color);
+    color: var(--black);
     position: relative;
     box-shadow: 00px 0px 10px 0px rgba(0, 0, 0, 0.2);
 }
@@ -500,7 +485,7 @@ a:active {
 }
 
 .footer .footer-content .links ul a{
-    color: var(--grey);
+    color: var(--black);
     text-decoration: none;
     display: block;
     margin-bottom: 10px;
@@ -509,14 +494,14 @@ a:active {
 }
 
 .footer .footer-content .links ul a:hover {
-    color: var(--primary-color);
+    color: var(--black);
     margin-left: 15px;
     transition: all .3s;
 }
 
 .footer .footer-content .contact-form .contact-input {
     background: rgb(92, 92, 92) ;
-    color: var(--primary-color);
+    color: var(--black);
     margin-bottom: 10px;
     line-height: 1.5rem;
     padding: .7rem 1.2rem;
