--- a/style.css
+++ b/style.css
@@ -75,9 +75,9 @@ nav {
 }
 
 .active, .nav-links li:hover{
-    transition: all .4s;
-    text-shadow: 2px 2px 2px rgb(255, 255, 255);
-    font-size: 26px;
+    transition: all 0.4s;
+    text-shadow: 2px 2px 2px rgb(88, 88, 88);
+    color: var(--black);
 }
 
 .sub-nav-1{
@@ -92,18 +92,10 @@ nav {
     text-align: center;
 }
 
-.kontrastbutton{
-    width: 80px;
-    height: 30px;
+.nomra{
+    margin: -10px;
+    width: 30px;
     transition: 1s;
-}
-.kontrastbutton:hover{
-    width: 80px;
-    border: 0px solid var(--black);
-    background-color: var(--primary-color);
-    box-shadow: 00px 0px 10px 0px rgba(0, 0, 0, 0.2);
-    transition: 1s;
-    border-radius: 100px;
 }
 
 
@@ -125,7 +117,7 @@ nav {
         width: 60%;
     }
 }
-@media screen and (max-width:1238px) {
+@media screen and (max-width:1295px) {
     body{
         overflow-x: hidden;
     }
@@ -202,7 +194,7 @@ transform: translateX(0px);
 	margin: auto;
     margin-bottom: 20px;
 	line-height: 30px;
-    min-width: 400px;
+    min-width: 300px;
     max-width: 500px;
 	width: 90%;
 }
@@ -251,7 +243,6 @@ transform: translateX(0px);
 	margin-left: 10%;
 }
 .sekcja-glowna{
-    float: left;
     width: 100%;
     text-align: center;
     padding-top: 25px;
@@ -283,42 +274,44 @@ transform: translateX(0px);
     background-image: url('bg.jpg');
     position: relative; 
     background-repeat: repeat;
-    background-size:auto;
+    background-size:contain;
 }
 .content2{
     z-index: 0;
     float: left;
     width: 100%;
-    height: 250vh;
+    min-height: 310vh;
+    height: 310vh;
     background-image: url('bg2.jpg');
-    position: relative; 
+    position: absolute; 
     background-repeat: repeat;
-    background-size:auto;
+    background-size:contain;
 }
 .content3{
     z-index: 0;
     float: left;
     width: 100%;
-    height: 230vh;
-    min-height: 100%;
+    max-height: 450vh;
+    min-height: 280vh;
+    height: 280vh;
     background-image: url('grass.jpg');
     position: relative; 
     background-repeat: repeat;
-    background-size:cover;
+    background-size:contain;
 }
 .content4{
     z-index: 0;
     float: left;
     width: 100%;
-    height: 50%;
-    min-height: 40%;
+    max-height: 130vh;
+    min-height: 70vh;
     background-image: url('contact.jpg');
     position: relative; 
     background-repeat: repeat;
-    background-size:auto;
+    background-size:contain;
 }
 .content-left{
-    min-width: 500px;
+    min-width: 400px;
     border-radius: 15px;
     border: 5px solid var(--black);
     background-color: var(--secondary-color-bg);
@@ -329,10 +322,9 @@ transform: translateX(0px);
     margin-right: auto;
     margin-top: 15px;
     margin-bottom:  100px;
-    float: left;
 }
 .content-mid{
-    min-width: 500px;
+    min-width: 300px;
     border-radius: 15px;
     border: 5px solid var(--black);
     border: 5px solid var(--black);
@@ -346,7 +338,7 @@ transform: translateX(0px);
     margin-bottom:  100px;
 }
 .content-mid-contact{
-    min-width: 500px;
+    min-width: 400px;
     max-width: 700px;
     border-radius: 15px;
     border: 5px solid var(--black);
@@ -372,8 +364,6 @@ transform: translateX(0px);
     margin-right: 15px;
     margin-top: 15px;
     margin-bottom:  100px;
-    float: right;
-    
 }
 .stronger{
     font-weight:bold;
